[package]
name = "enokey"
version = "0.2.3"
authors = ["Frederick Hirsch <fsck@legit.solutions>"]

[dependencies]
rocket = "0.4"
rocket_contrib = {version = "0.4", features = ["handlebars_templates"]}
openssh-keys = "0.3.*"
base64 = "*"
regex = "*"
lazy_static = "1.0"
getopts = "0.2"
reqwest = "*"
ssh2 = "*"
dirs = "1.0"
